@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Remove @response instance variable in PayflowGateway [cody]
 * Remove @response instance variable in MonerisGateway [cody]
 * Remove @response instance variable and don't use billing address for shipping address in LinkpointGateway [cody]
 * Remove @response instance variable from ExactGateway [cody]
